<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- -->
    <string name="GOOGLE_API_KEY" translatable="false">AIzaSyDCXBbnL9Tw5L_0G6MMtr-F7ibrX-oAx40</string>

    <!-- Facebook API key -->
    <string name="facebook_application_id" translatable="false">3154812581513075</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3154812581513075</string>

    <!-- Twitter API key-->
    <string name="twitter_consumer_key" translatable="false">JOieOwLaIrFaliGV9pIVCYvGq</string>
    <string name="twitter_consumer_secret" translatable="false">IdOkjlpxxN3dgP87xuYaZ7DekFuZpsbyVilqyDcTpXLWK2cCZ3</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Go4Lunch</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_lunch">YOUR LUNCH</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="bottom_map">Map View</string>
    <string name="bottom_list">List View</string>
    <string name="bottom_workmates">Workmates</string>
    <string name="user_picture">User Picture</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dialog_message_subscribed">You\'ll eat at\ </string>
    <string name="dialog_message">You haven\'t chosen a place to eat yet.</string>
    <string name="dialog_title">Your lunch</string>
    <string name="search">Search</string>
    <string name="workmate_eating_at">\ is eating at\ </string>
    <string name="workmate_undecided">\ hasn\'t decided yet.</string>
    <string name="details_joining">\ is joining</string>
    <string name="details_phone">PHONE</string>
    <string name="details_rate">RATE</string>
    <string name="details_website">WEBSITE</string>
    <string name="list_adapter_closing_soon">Closing soon</string>
    <string name="list_adapter_open_until">Open until\ </string>
    <string name="list_adapter_open24_7">Open 24/7</string>
    <string name="list_adapter_closed">Closed</string>
    <string name="list_adapter_unspecified_opening_hours">Unspecified opening hours</string>
    <string name="eat_at">You\'ll eat at\ </string>

    <string name="url_start" translatable="false"><![CDATA[https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photo_reference=]]></string>
    <string name="url_key" translatable="false"><![CDATA[&key=]]></string>
    <string name="your_lunch">Your lunch</string>
    <string name="ok">ok</string>
    <string name="tomorrow">tomorrow</string>


</resources>