<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_map">

    <fragment
        android:id="@+id/bottom_map"
        android:name="com.ocproject7.go4lunch.ui.map.MapFragment"
        android:label="@string/bottom_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/bottom_list"
        android:name="com.ocproject7.go4lunch.ui.list.ListFragment"
        android:label="@string/bottom_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/bottom_workmates"
        android:name="com.ocproject7.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/bottom_workmates"
        tools:layout="@layout/fragment_workmates" />

</navigation>